--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
           <p class="islom">Islomxoja</p>
         </div>
         <div class="sayts">
-          <a class="home">Home</a>
-          <a class="sayt">Guruhdoshlarim</a>
-          <a class="sayt">Men haqimda</a>
-          <a class="sayt">Loyhalarim</a>
-          <a class="sayt">Bog'laning uchun</a>
+          <a id="home" class="home">Home</a>
+          <a id="guruh" class="sayt">Guruhdoshlarim</a>
+          <a id="men" class="sayt">Men haqimda</a>
+          <a id="loyha" class="sayt">Loyhalarim</a>
+          <a id="boglsh" class="sayt">Bog'laning uchun</a>
         </div>
         <button class="top-btn">Hire me</button>
       </div>
@@ -58,7 +58,7 @@
             <img class="image-two" src="./image.png" alt="rasm" />
           </div>
         </div>
-        <div id="guruhdoshlarim" class="cards-two">
+        <div id="guruh" class="cards-two">
           <p class="clas" id="guruh">Guruhdoshlarim</p>
           <div class="cards-thri">
             <div class="card-two">
@@ -137,7 +137,7 @@
 
             <div class="card-ten">
               <div class="image-card">
-                <img class="image-ozm" src="./test-img.png" alt="rasm" />
+                <img class="image-ozm" src="./ai.png" alt="rasm" />
               </div>
               <button class="btn-ozm">
                 <a class="href-ozm" href="./test/index.html">Loyiham</a>
