--- a/index.html
+++ b/index.html
@@ -85,6 +85,16 @@
               <img class="img-for" src="./ravshan.jpg" alt="rasm" />
               <p>Bu meni guruhdoshim Ravshan</p>
             </div>
+            <div class="zer">
+              <div class="card-two">
+                <img class="img-for" src="./kim.jpg" alt="rasm" />
+                <p>Bu meni guruhdoshim Nasrulloh</p>
+              </div>
+              <div class="card-two">
+                <img class="img-for" src="./imron.jpg" alt="rasm" />
+                <p>Bu meni guruhdoshim Imron</p>
+              </div>
+            </div>
           </div>
         </div>
         <div id="about" class="card-fayf">
